# camera_pose

./: .hgignore  Makefile  pr2_auto_calibration.rosinstall  rosdep.yaml  stack.xml
arm_control/: mainpage.dox  manifest.xml
calibration_msgs/: manifest.xml
calibration_msgs/msg/: CalibrationPattern.msg  CameraCalibration.msg  ImagePoint.msg
camera_pose/: CMakeLists.txt  package.xml
camera_pose_calibration/: CMakeLists.txt  calibrate_2_camera.launch  calibrate_3_camera.launch  calibrate_4_camera.launch  manifest.xml  package.xml  rgb_block.launch  setup.py
camera_pose_calibration/blocks/: calibration_tf_publisher.launch  rgb_block.launch  rgb_trigger_block.launch
camera_pose_calibration/launch_extrinsics/: calibrate_2_camera.launch  calibrate_3_camera.launch  calibrate_4_camera.launch  calibrate_5_camera.launch  calibrate_cbar.launch  calibrate_kinect_extrinsics.launch
camera_pose_calibration/launch_intrinsics/: calibrate_kinect_intrinsics.launch  calibrate_kinect_intrinsics_large_checker.launch  calibrate_kinect_intrinsics_small_checker.launch  calibrate_prosilica_intrinsics.launch
camera_pose_calibration/msg/: CameraCalibration.msg  CameraMeasurement.msg  CameraPose.msg  RobotMeasurement.msg
camera_pose_calibration/scripts/: calibration_transform_publisher.py  calibration_transform_publisher.py.bak  camera_info_converter.py  capture_monitor.py  capture_monitor.py.bak  filter_intervals.py  filter_intervals.py.bak  flip_flop_kinect.py  msg_saver.py  msg_saver.py.bak  multicam_capture_exec.py  run_optimization_fake.py  run_optimization_online.py  run_optimization_online.py.bak  run_optimization_prior.py  start_cb_detector_action_old.py  start_cb_detector_action_old.py.bak  start_interval_intersection.py  start_interval_intersection.py.bak  start_monocam_settler_action.py  start_monocam_settler_action.py.bak  static_transform_publisher.py  trigger_one_image.py
camera_pose_calibration/src/camera_pose_calibration/: calibration_transform_publisher.py  camera_info_converter.py  capture_monitor.py  estimate.py  filter_intervals.py  flip_flop_kinect.py  init_optimization_prior.py  msg_saver.py  multicam_capture_exec.py  robot_measurement_cache.py  run_optimization_fake.py  run_optimization_online.py  start_cb_detector_action_old.py  start_interval_intersection.py  start_monocam_settler_action.py  trigger_one_image.py
camera_pose_calibration/srv/: FramePair.srv  Reset.srv
camera_pose_calibration/test/: test_camera_pose_calibration.launch  test_camera_pose_calibration.py
camera_pose_estimation/: calibrate_multi_camera.launch  calibration_tf_publisher.launch  manifest.xml
camera_pose_estimation/msg/: CalibrationEstimate.msg
camera_pose_toolkits/: CMakeLists.txt  main.launch  mainpage.dox  manifest.xml  package.xml  setup.py
camera_pose_toolkits/launch/: camera_localization.launch  playback.launch  test.launch  urdf_updater.launch
camera_pose_toolkits/scripts/: dispatcher_gui.py  transform_message_saver.py
camera_pose_toolkits/src/: camera_dispatcher.cpp  camera_pose_static_transform_tf_broadcaster.cpp  transform_finder.cpp  transform_playback.cpp  urdf_writer.cpp
camera_pose_toolkits/src/camera_pose_toolkits/: dispatcher_gui.py  transform_message_saver.py
camera_pose_toolkits/srv/: Switch.srv
camera_pose_urdf_updater/: CMakeLists.txt  example terminal command  main.launch  manifest.xml  urdf_updater.launch
camera_pose_urdf_updater/src/: camera_pose_static_transform_tf_broadcaster.cpp  camera_pose_urdf_updater.cpp  camera_pose_urdf_updater2.cpp
cov/pr2_calibration_estimation/: CMakeLists.txt  (+1 more)
dense_laser_assembler/: CMakeLists.txt  mainpage.dox  manifest.xml
dense_laser_assembler/include/dense_laser_assembler/: dense_laser_assembler.h
dense_laser_assembler/scripts/: assembler_node.py  laser_image_node.py
dense_laser_assembler/src/: dense_laser_assembler.cpp  dense_laser_imager.cpp
dense_laser_assembler/src/dense_laser_assembler/: dense_laser_cache.py
dense_laser_assembler/test/: CMakeLists.txt  dense_laser_assembler_unittest.cpp
image_cb_detector/: CMakeLists.txt  manifest.xml  openni_node.launch  stereo_kinect.launch
image_cb_detector/include/image_cb_detector/: image_cb_detector_old.h
image_cb_detector/scripts/: start_stereo_cb_detector_action.py
image_cb_detector/src/: image_cb_detector_action_old.cpp  image_cb_detector_old.cpp  stereo_cb_detector_action.cpp
interval_intersection/: manifest.xml
joint_states_settler/: manifest.xml
kinect_depth_calibration/: CMakeLists.txt  cb_detector.py  depth_calibrator.py  mainpage.dox  manifest.xml  package.xml  setup.py  test.launch  test_calibration.launch
kinect_depth_calibration/scripts/: cb_detector.py.bak  depth_calibrator.py  depth_center_extractor.py
kinect_depth_calibration/srv/: GetCheckerboardCenter.srv  GetCheckerboardPose.srv
laser_cb_detector/: CMakeLists.txt  manifest.xml
laser_joint_processor/: CMakeLists.txt  mainpage.dox  manifest.xml
laser_joint_processor/test/: CMakeLists.txt  interp_snapshot_unittest.cpp  joint_image_interpolator_unittest.cpp  joint_imager_unittest.cpp  laser_joint_processor_unittest.cpp
laser_joint_projector/: CMakeLists.txt  mainpage.dox  manifest.xml
laser_joint_projector/include/laser_joint_projector/: laser_joint_projector.h
laser_joint_projector/src/: keyboard_float_generator.cpp  laser_joint_projector.cpp  laser_joint_projector_node.cpp  time_alignment_node.cpp
megacal_estimation/: CMakeLists.txt  cal_publisher.launch  calibrate_multi_camera.launch  calibration_tf_publisher.launch  capture_extrinsic_data.launch  init_optimization_cb.py  mainpage.dox  manifest.xml  run_optimization_fake.py  run_optimization_online.py  run_optimization_prior.py
monocam_settler/: manifest.xml
pr2_calibration_estimation/: CMakeLists.txt  manifest.xml
pr2_calibration_executive/: CMakeLists.txt  manifest.xml
pr2_calibration_launch/: manifest.xml
pr2_dense_laser_snapshotter/: mainpage.dox  manifest.xml
pr2_led_detector/: mainpage.dox  manifest.xml
remapping_tests/: CMakeLists.txt  mainpage.dox  manifest.xml
settlerlib/: manifest.xml
(+381 files in other folders)
